--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -17,7 +17,7 @@
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "db:seed": "prisma db seed",
-    "trigger:dev": "npx trigger.dev@latest dev",
+    "trigger:dev": "npx trigger.dev@latest dev --skip-update-check",
     "dev": "npx concurrently --kill-others --names \"next,trigger\" --prefix-colors \"yellow,blue\" \"next dev --turbopack\" \"npm run trigger:dev\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
